--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>This is a Design Version V8</h1>
-    <p>Welcome to Terraform Tutorials</p>
+    <p>Welcome buddy to Terraform Tutorials</p>
 </body>
 
 </html>
